fixes formatting and adds documentation

--- a/IMDB_DataPrep.ipynb
+++ b/IMDB_DataPrep.ipynb
@@ -84,9 +84,9 @@
     "    \"title.ratings.tsv.gz\" : \"https://datasets.imdbws.com/title.ratings.tsv.gz\"\n",
     "}\n",
     "\n",
-    "#for file_name, file_url in file_dict.items():\n",
-    "    #print(file_name, \":\", file_url)\n",
-    "    #download_file(file_name,file_url)"
+    "for file_name, file_url in file_dict.items():\n",
+    "    print(file_name, \":\", file_url)\n",
+    "    download_file(file_name,file_url)"
    ]
   },
   {
