spelling and formatting

--- a/IMDB_DataPrep.ipynb
+++ b/IMDB_DataPrep.ipynb
@@ -3770,7 +3770,8 @@
     }
    ],
    "source": [
-    "#drop films before 1913 - most movies prior were very basic and limited. https://en.wikipedia.org/wiki/Classical_Hollywood_cinema#Maturation_of_the_silents_(1913%E2%80%93late_1920s)\n",
+    "# drop films before 1913 - most movies prior were very basic and limited\n",
+    "# https://en.wikipedia.org/wiki/Classical_Hollywood_cinema#Maturation_of_the_silents_(1913%E2%80%93late_1920s)\n",
     "title_movies_df = title_movies_df[ (title_movies_df['startYear'] >= 1913)]\n",
     "\n",
     "# drop null genre column\n",
