--- a/IMDB_EDA.ipynb
+++ b/IMDB_EDA.ipynb
@@ -1265,7 +1265,7 @@
     }
    ],
    "source": [
-    "# average ratings seem to vary by moive year \n",
+    "# average ratings seem to vary by movie year \n",
     "plt.plot(modeling_df.groupby('startYear')['averageRating'].mean())\n",
     "plt.title('Average Rating by Year')\n",
     "plt.xlabel('year')\n",
